--- a/contacts.html
+++ b/contacts.html
@@ -7,7 +7,7 @@
 
     <nav class="navbar">
         <ul>
-            <li><a href="file.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="chapters.html">Chapters</a></li>
             <li><a href="contacts.html" class="active">Contacts</a></li>
